Add support for Hitster cards

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
     <title>SongSeeker</title>
-    <script src="https://unpkg.com/html5-qrcode"></script>
+    <script type="module">
+        import QrScanner from "https://unpkg.com/qr-scanner/qr-scanner.min.js";
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="qr-reader" style="width:500px"></div>
+    <div id="qr-reader">
+        <video id="qr-video"></video>
+    </div>
     <div id="qr-reader-results"></div>
     <div>Playback Duration (seconds): <input type="number" id="playback-duration" value="30"></div>
     <button id="set-duration">Set Duration</button>
@@ -15,15 +19,14 @@
     <div id="player"></div>
     <div>Video Title: <span id="video-title"></span></div>
     <div>Video Duration: <span id="video-duration"></span></div>
-    <button id="play-video">Play</button>
-    <button id="play-video-random-start">Play Random</button>
-    <button id="stop-video">Stop</button>
+    <button id="play-video" class="button">Play all</button>
+    <button id="play-video-random-start" class="button">Play Random time</button>
+    <button id="stop-video" class="button">Stop</button>
     <br>
     <br>
     <button id="startScanButton" class="button">Start Scan</button>
-    <script src="https://www.youtube.com/iframe_api"></script>
     
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 
 </body>
 </html>
