Do not start with scan, add Link to Github

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
     <br>
     <br>
     <button id="startScanButton" class="button">Start Scan</button>
+    <button id="cancelScanButton" class="button">Cancel Scan</button>
     
+    <div>
+        <a href="https://github.com/andygruber/songseeker/" target="_blank">View the SongSeeker project on GitHub</a>
+    </div>
+
     <script type="module" src="app.js"></script>
 
 </body>
