implement simple hide info function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
 
     <div id="player"></div>
-    <div>Video Title: <span id="video-title"></span></div>
+    <div id="videotitle">Video Title: <span id="video-title"></span></div>
     <div>Video Duration: <span id="video-duration"></span></div>
     <button id="play-video" class="button">Play all</button>
     <button id="play-video-random-start" class="button">Play Random time</button>
@@ -26,7 +26,8 @@
     <br>
     <button id="startScanButton" class="button">Start Scan</button>
     <button id="cancelScanButton" class="button">Cancel Scan</button>
-    
+    <button id="hideInfo" class="button">Hide Song Info</button>
+
     <div>
         <a href="https://github.com/andygruber/songseeker/" target="_blank">View the SongSeeker project on GitHub</a>
     </div>
