Add Youtube Music as a possible source

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         import QrScanner from "https://unpkg.com/qr-scanner/qr-scanner.min.js";
     </script>
     <link rel="stylesheet" href="style.css">
+    <meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <div><h2>songseeker</h2></div>
     <div id="qr-reader">
         <video id="qr-video"></video>
     </div>
