--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div><h2>songseeker</h2></div>
+    <div><h2>SongSeeker</h2></div>
     <div id="qr-reader">
         <video id="qr-video"></video>
     </div>
