Add icons and set webapp flags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     </script>
     <link rel="stylesheet" href="style.css">
     <meta name=viewport content="width=device-width, initial-scale=1">
+
+    <!-- Allow web app to be run in full-screen mode -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    
+    <!-- iOS icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="icon-180x180.png">
+    <!-- Android icons -->
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192x192.png">
 </head>
 
 <body>
