--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="icon-180x180.png">
     <!-- Android icons -->
     <link rel="icon" type="image/png" sizes="192x192" href="icon-192x192.png">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="96x96" href="icon-96x96.png">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 	<link rel="shortcut icon" sizes="192x192" href="icon-192x192.png">
 
