Add App manifest for Android

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 	<link rel="shortcut icon" sizes="192x192" href="icon-192x192.png">
 
+    <link rel="manifest" href="manifest.json">
+
 </head>
 
 <body>
