Add a button to test handleScannedLink without camera

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                 <input type="checkbox" id="cookies" name="cookies" />
                 <label for="cookies">Show cookies</label>
                 <span id="cookielist"></span>
-                
+                <br/>
+                <button id="debugButton" class="button">Debug Scan</button>
             </div>
         </div>
     </div>
