Sorta fix autoplay on iOS

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <div id="player"></div> <!-- Load YouTube Player -->
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js?version=20250202v5"></script>
 
 </body>
 
