--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <input type="checkbox" id="cb_settings" name="cb_settings" />
       <label for="cb_settings">Show / Hide settings</label>
     </div>
-    <div class="settings_div" id="settings_div">
+    <div class="settings_div hidden" id="settings_div">
       <div class="text-block">
         <div class="heading">Autoplay</div>
         <div>
