--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       Video Duration: <span id="video-duration"></span>
     </div>
     <div id="videostart">Start Time: <span id="video-start"></span></div>
+    <div id="playbacksource">Source: <span id="playback-source">YouTube</span></div>
 
     <hr />
     <br/>
@@ -78,6 +79,30 @@
     </div>
         
 
+
+      <div class="text-block">
+        <div class="heading">Plex Integration</div>
+        <div>
+          <input type="checkbox" id="usePlex" name="usePlex" />
+          <label for="usePlex">Use Plex (primary source)</label>
+          <br /><br />
+          <label for="plexServerUrl">Plex Server URL:</label>
+          <input type="text" id="plexServerUrl" placeholder="http://192.168.1.100:32400" />
+          <br />
+          <label for="plexToken">Plex Token:</label>
+          <input type="password" id="plexToken" placeholder="Your X-Plex-Token" />
+          <br />
+          <small><a href="https://support.plex.tv/articles/204059436-finding-an-authentication-token-x-plex-token/" target="_blank">How to find your Plex token</a></small>
+          <br /><br />
+          <label for="plexMappingFile">Import Plex Mapping:</label>
+          <input type="file" id="plexMappingFile" accept=".json" />
+          <br />
+          <span id="plexMappingStatus"></span>
+          <br />
+          <button id="testPlexConnection" class="button">Test Connection</button>
+          <span id="plexConnectionStatus"></span>
+        </div>
+      </div>
 
       <div class="text-block">
         <div class="heading">Debug</div>
