Added plex debugging

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       Video Duration: <span id="video-duration"></span>
     </div>
     <div id="videostart">Start Time: <span id="video-start"></span></div>
-    <div id="playbacksource">Source: <span id="playback-source">YouTube</span></div>
+    <div id="playbacksource">Source: <span id="playback-source"></span></div>
+    <div id="plexdebug">Plex: <span id="plex-debug"></span></div>
 
     <hr />
     <br/>
