Removed unused code, added game edition info

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
           <label for="cookies">Show cookies</label>
           <span id="cookielist"></span>
                 <br/>
+          <input type="checkbox" id="showGameEditions" name="showGameEditions" />
+          <label for="showGameEditions">Show available Game Editions</label>
+          <div id="gameEditionsList" style="display: none;"></div>
+                <br/>
           <button id="debugButton" class="button">Debug Scan</button>
         </div>
       </div>
