Removed/renamed "video" references, updated song info

--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
 
     <button id="startScanButton" class="button_startscan">Start Scan</button>
     <br />
-    <button id="startstop-video" class="button_startstop">Play</button>
+    <button id="startstop-song" class="button_startstop">Play</button>
 
-    <div id="videoid">Video ID: <span id="video-id"></span></div>
-    <div id="videotitle">Video Title: <span id="video-title"></span></div>
-    <div id="videoduration">
-      Video Duration: <span id="video-duration"></span>
+    <div id="ratingkeyrow">Rating Key: <span id="song-ratingkey"></span></div>
+    <div id="artistrow">Artist: <span id="song-artist"></span></div>
+    <div id="titlerow">Title: <span id="song-title"></span></div>
+    <div id="yearrow">Year: <span id="song-year"></span></div>
+    <div id="durationrow">
+      Duration: <span id="song-duration"></span>
     </div>
-    <div id="plexdebug">Plex: <span id="plex-debug"></span></div>
 
     <hr />
     <br/>
