--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <button id="startScanButton" class="button_startscan">Start Scan</button>
     <br />
     <button id="startstop-song" class="button_startstop">Play</button>
+    <br />
+    <button id="toggleSonginfoButton" class="button">Show Song Info</button>
 
     <div id="ratingkeyrow">Rating Key: <span id="song-ratingkey"></span></div>
     <div id="artistrow">Artist: <span id="song-artist"></span></div>
@@ -48,22 +50,16 @@
     </div>
 
     <hr />
-    <br/>
-    <div>
-        <a href="https://github.com/andygruber/songseeker/" target="_blank">View the SongSeeker project on GitHub</a>
-    </div>
-    <br/>
-    <!-- <p id="list"></p> -->
-    <div id="show_hide_settings">
-      <input type="checkbox" id="cb_settings" name="cb_settings" />
-      <label for="cb_settings">Show / Hide settings</label>
-    </div>
+    <button id="toggleSettingsButton" class="button">Show Settings</button>
     <div class="settings_div hidden" id="settings_div">
       <div class="text-block">
         <div class="heading">Autoplay</div>
         <div>
           <input type="checkbox" id="autoplay" name="autoplay" />
           <label for="autoplay">Autoplay</label>
+          <br />
+          <input type="checkbox" id="autoShowSonginfo" name="autoShowSonginfo" />
+          <label for="autoShowSonginfo">Show song info after 5 seconds</label>
         </div>
       </div>
 
@@ -93,17 +89,14 @@
       <div class="text-block">
         <div class="heading">Debug</div>
         <div>
-          <input type="checkbox" id="songinfo" name="songinfo" />
-          <label for="songinfo">Show song info</label>
-                <br/>
           <input type="checkbox" id="cookies" name="cookies" />
           <label for="cookies">Show cookies</label>
           <span id="cookielist"></span>
-                <br/>
+          <br/>
           <input type="checkbox" id="showGameEditions" name="showGameEditions" />
           <label for="showGameEditions">Show available Game Editions</label>
           <div id="gameEditionsList" style="display: none;"></div>
-                <br/>
+          <br/>
           <button id="debugButton" class="button">Debug Scan</button>
         </div>
       </div>
