--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <video id="qr-video"></video>
     </div>
 
-    <button id="startScanButton" class="button_startscan">Start Scan</button>
-    <br />
-    <button id="startstop-song" class="button_startstop">Play</button>
-    <br />
-    <button id="toggleSonginfoButton" class="button">Show Song Info</button>
+    <div class="button-group">
+      <button id="startScanButton" class="button_startscan">Start Scan</button>
+      <button id="startstop-song" class="button_startstop">Play</button>
+      <button id="toggleSonginfoButton" class="button">Show Song Info</button>
+    </div>
 
     <div id="ratingkeyrow">Rating Key: <span id="song-ratingkey"></span></div>
     <div id="artistrow">Artist: <span id="song-artist"></span></div>
