--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
     <div class="button-group">
       <button id="startScanButton" class="button_startscan">Start Scan</button>
-      <button id="startstop-song" class="button_startstop">Play</button>
+      <div class="playback-controls">
+        <button id="seek-back" class="button_seek" disabled>-30s</button>
+        <button id="startstop-song" class="button_startstop">Play</button>
+        <button id="seek-forward" class="button_seek" disabled>+30s</button>
+      </div>
       <button id="toggleSonginfoButton" class="button">Show Song Info</button>
     </div>
 
@@ -47,6 +51,11 @@
     <div id="yearrow">Year: <span id="song-year"></span></div>
     <div id="durationrow">
       Duration: <span id="song-duration"></span>
+    </div>
+    <div id="progressrow">
+      <span id="current-time">0:00</span>
+      <input type="range" id="progress-bar" min="0" max="100" value="0" step="0.1">
+      <span id="total-time">0:00</span>
     </div>
 
     <hr />
